@@ -23,6 +23,7 @@ Fernando Lopez-Lezcano
 2008-03-16 Stephane Letz  <letz@grame.fr>
 		
 	* Use engine in JackAlsaDriver::port_register and JackAlsaDriver::port_unregister.
+	* New JackLockedEngine decorator class to serialize access from ALSA Midi thread, command thread and in-server clients.
 
 2008-03-15 Stephane Letz  <letz@grame.fr>
 		
